feat: studio page
